--- a/to-be-deleted.tex
+++ b/to-be-deleted.tex
@@ -379,6 +379,7 @@ Parameter inference is implemented in the \texttt{BASiCS\_MCMC} function using a
 adaptive Metropolis within Gibbs algorithm \citep{Roberts2009}, whose convergence can
 be assessed using the \texttt{BASiCS\_DiagHist} and \texttt{BASiCS\_DiagPlot} functions,
 among others.
+
 The output from \texttt{BASiCS\_MCMC} is a \texttt{BASiCS\_Chain} object, which can be used
 for further downstream analyses. In particular, \texttt{BASiCS\_DetectHVG} and
 \texttt{BASiCS\_DetectLVG} can be respectively used to identify highly and lowly
@@ -705,22 +706,58 @@ gene-specific quality metrics need to be closely examined as suggested by the
 \end{Highlighting}
 \end{Shaded}
 
-The final dataset used in subsequent analyses contains 146
-cells and 8953 genes.
+The final dataset used in subsequent analyses contains
+146 cells and 8953 genes.
 
-\hypertarget{calculating-the-molecule-count-for-spike-in-genes}{%
-\subsection{Calculating the molecule count for spike-in genes}\label{calculating-the-molecule-count-for-spike-in-genes}}
+\hypertarget{basics-analysis---input-data}{%
+\subsection{BASiCS analysis - input data}\label{basics-analysis---input-data}}
 
-BASiCS requires the absolute molecule count of the spike-in transcripts that
-were added to each well. To calculate the molecule count, we require the
-dilution and the concentration of the spike-in mix.
-For this, a table of the spike-in concentrations can be downloaded from
-\href{https://www.thermofisher.com/order/catalog/product/4456740}{https://www.thermofisher.com}.
-The file contains the concentrations of 2 ERCC spike-in mixes.
+Here, we apply the \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} model separately to cells from each
+experimental condition (93
+naive and 53 activated cells).
+Separate \texttt{SingleCellExperiment} objects are created for each group of cells.
 
-For the CD4\textsuperscript{+} T cell data, the authors added a 1:50,000 dilution of the ERCC
-spike-in mix 1 \citep{Martinez-jimenez2017}.
-We will first download the concentration information.
+\begin{Shaded}
+\begin{Highlighting}[]
+\NormalTok{sce_naive <-}\StringTok{ }\NormalTok{sce_naive_active[, sce_naive_active}\OperatorTok{$}\NormalTok{Stimulus }\OperatorTok{==}\StringTok{ "Unstimulated"}\NormalTok{]}
+\NormalTok{sce_active <-}\StringTok{ }\NormalTok{sce_naive_active[, sce_naive_active}\OperatorTok{$}\NormalTok{Stimulus }\OperatorTok{==}\StringTok{ "Active"}\NormalTok{]}
+\end{Highlighting}
+\end{Shaded}
+
+Here, we update these objects in order to match the format required by
+\emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}. Firstly, if multiple batches of sequenced cells are
+available (e.g.~multiple donors from which cells were extracted or multiple
+sequencing batches from the same experimental condition), this information
+must be included under the \texttt{BatchInfo} label as part of the cell-level metadata.
+
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{colData}\NormalTok{(sce_naive)}\OperatorTok{$}\NormalTok{BatchInfo <-}\StringTok{ }\KeywordTok{colData}\NormalTok{(sce_naive)}\OperatorTok{$}\NormalTok{Individuals}
+\KeywordTok{colData}\NormalTok{(sce_active)}\OperatorTok{$}\NormalTok{BatchInfo <-}\StringTok{ }\KeywordTok{colData}\NormalTok{(sce_active)}\OperatorTok{$}\NormalTok{Individuals}
+\end{Highlighting}
+\end{Shaded}
+
+When spike-in information is used to aid data normalisation and technical noise
+quantification, the user also needs to provide the number of spike-in molecules
+that were added to each well (this is not required when \texttt{WithSpikes\ =\ FALSE} in
+\texttt{BASiCS\_MCMC}).
+For each spike-in gene \(i\), this corresponds to:
+
+\[ \mu_{i} = C_i \times 10^{-18} \times (6.022 \times 10^{23}) 
+\times V \times D \hspace{0.5cm} \mbox{where,} \]
+
+\begin{itemize}
+\item
+  \(C_i\) is the concentration for the spike-in \(i\) (measured in \(aM\mu{}l^{-1}\)),
+\item
+  \(V\) is the volume added into each well (measure in \(nl\)) and
+\item
+  \(D\) is a dilution factor.
+\end{itemize}
+
+The remaining factors in the equation above are conversion constants.
+For the CD4\textsuperscript{+} T cell data, the authors added a 1:50,000 dilution of the ERCC spike-in mix 1. Moreover, a volume of \(9nl\) was added into each well (see \url{https://www.fluidigm.com/faq/ifc-9})
+and input concentrations \(C_i\) can be downloaded from \url{https://assets.thermofisher.com/TFS-Assets/LSG/manuals/cms_095046.txt}).
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -742,195 +779,42 @@ We will first download the concentration information.
 \end{Highlighting}
 \end{Shaded}
 
-The concentration is given in units of \(aM\mu{}l^{-1}\).
-We will first calculate the concentration in \(M\mu{}l^{-1}\).
+Based on this information, the calculation above proceeds as follows
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \CommentTok{# Moles per micro litre}
 \NormalTok{ERCC_mmul <-}\StringTok{ }\NormalTok{ERCC_conc}\OperatorTok{$}\NormalTok{concentration.in.Mix.}\DecValTok{1}\NormalTok{..attomoles.ul. }\OperatorTok{*}\StringTok{ }\NormalTok{(}\DecValTok{10}\OperatorTok{^}\NormalTok{(}\OperatorTok{-}\DecValTok{18}\NormalTok{))}
-\end{Highlighting}
-\end{Shaded}
-
-From this, we can calculate the molecule count per \(\mu{}l\) using the fact that
-1 mole comprises \(6.02214076 \times 10^{23}\) molecules.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\CommentTok{# Molecule count per micro litre}
+\CommentTok{# Molecule count per micro litre (1 mole comprises 6.02214076 x 10^\{23\} molecules)}
 \NormalTok{ERCC_countmul <-}\StringTok{ }\NormalTok{ERCC_mmul }\OperatorTok{*}\StringTok{ }\NormalTok{(}\FloatTok{6.02214076} \OperatorTok{*}\StringTok{ }\NormalTok{(}\DecValTok{10}\OperatorTok{^}\DecValTok{23}\NormalTok{))}
-\end{Highlighting}
-\end{Shaded}
-
-During the preparation of the reaction mix, the authors diluted this mix by a
-factor of 1:50,000 \citep{Martinez-jimenez2017}.
-The actual molecule number of spike-ins can therefore be calculated per \(\mu{}l\):
-
-\begin{Shaded}
-\begin{Highlighting}[]
+\CommentTok{# Application of the dilution factor (1:50,000)}
 \NormalTok{ERCC_count <-}\StringTok{ }\NormalTok{ERCC_countmul }\OperatorTok{/}\StringTok{ }\DecValTok{50000}
-\end{Highlighting}
-\end{Shaded}
-
-The volume per well in the IFC chip is \(9nl\)
-\url{https://www.fluidigm.com/faq/ifc-9}.
-We therfore need to calculate the number of molecules in \(9nl\) reaction mix.
-
-\begin{Shaded}
-\begin{Highlighting}[]
+\CommentTok{# Multiplying by the volume added into each well}
 \NormalTok{ERCC_count_final <-}\StringTok{ }\NormalTok{ERCC_count }\OperatorTok{*}\StringTok{ }\FloatTok{0.009}
 \end{Highlighting}
 \end{Shaded}
 
-Depending on the technology used to capture and process single cells, as well
-as the dilution of the spike-in mix, the absolute number of spike-ins per
-reaction varies across experiments.
-The absolute amount of spike-ins per reaction is only used
-to calibrate the scale of the capture efficiency normalisation parameter
-\(\nu_j\). Since the true concentration of each spike-in molecule is known,
-BASiCS uses the observed counts of each molecule for each cell to estimate the
-capture efficiency for each cell, \(\nu_j\). Differences in the
-global scale across all wells of the level of spike-ins molecules thus do not
-affect the cell-to-cell ratios of \(\nu_j\).
-BASiCS assumes that the quantity of spike-ins is consistent in each well in
-each experiment. While the quantity used must remain constant between wells and
-experiments, the scale does not affect the results, provided the spike-ins
-are at a reasonable level. In particular, they should not be in such a low
-concentration that they are rarely detected, and they should not be at such
-a high concentration that the majority of the sequencing reads map to the
-spike-in molecules.
-
-We can now use the molecule count to prepare the BASiCS data object.
-To incorporate the spike-in molecule counts within the
-\emph{\href{https://bioconductor.org/packages/3.11/SingleCellExperiment}{SingleCellExperiment}} object that BASiCS requires, the first
-column must contain the names associated to the spike-in molecules.
-The second column must contain the input number of molecules for the spike-in
-genes (amount per reaction).
+To update the \texttt{sce\_naive} and \texttt{sce\_active} objects with this information, the
+user to create \texttt{data.frame} whose first column contains the labels associated to
+the spike-in molecule (e.g.~ERCC-00130) and whose second column contains the
+input number of molecules calculated above (note: the code below assumes that
+expression counts for spike-in genes are already available via
+\texttt{altExp(sce\_naive)} and \texttt{altExp(sce\_active)}, respectively).
 
 \begin{Shaded}
 \begin{Highlighting}[]
 \CommentTok{# Prepare the data.frame}
-\NormalTok{ERCC_count <-}\StringTok{ }\KeywordTok{data.frame}\NormalTok{(}
-  \DataTypeTok{row.names =}\NormalTok{ ERCC_conc}\OperatorTok{$}\NormalTok{ERCC.ID,}
+\NormalTok{SpikeInput <-}\StringTok{ }\KeywordTok{data.frame}\NormalTok{(}
   \DataTypeTok{Names =}\NormalTok{ ERCC_conc}\OperatorTok{$}\NormalTok{ERCC.ID,}
   \DataTypeTok{count =}\NormalTok{ ERCC_count_final}
 \NormalTok{)}
+\CommentTok{# Exclude spike-ins not included in the input SingleCellExperiment objects}
+\NormalTok{SpikeInput <-}\StringTok{ }\KeywordTok{subset}\NormalTok{(SpikeInput, Names }\OperatorTok{%in%}\StringTok{ }\KeywordTok{rownames}\NormalTok{(}\KeywordTok{altExp}\NormalTok{(sce_naive)))}
+\CommentTok{# Added as metadata information to each SingleCellExperiment object}
+\KeywordTok{metadata}\NormalTok{(sce_naive)}\OperatorTok{$}\NormalTok{SpikeInput <-}\StringTok{ }\NormalTok{SpikeInput}
+\KeywordTok{metadata}\NormalTok{(sce_active)}\OperatorTok{$}\NormalTok{SpikeInput <-}\StringTok{ }\NormalTok{SpikeInput}
 \end{Highlighting}
 \end{Shaded}
-
-\hypertarget{Tcells-single}{%
-\subsection{\texorpdfstring{Single condition example: Naive CD4\textsuperscript{+} T cells}{Single condition example: Naive CD4+ T cells}}\label{Tcells-single}}
-
-To highlight the use of BASiCS to analyse cells in the single-condition case,
-we select naive CD4\textsuperscript{+} T cells of young B6 animals.
-Here, BASiCS can be used to identify highly- and lowly-variable genes and
-calculate interpretable gene- and cell-specific parameters.
-Among others, these include gene-specific parameters for mean expression,
-over-dispersion (biological variability) and residual over-dispersion
-(biological variability after correcting for the confounding of mean and
-over-dispersion).
-
-\hypertarget{Tcells-filtering}{%
-\subsubsection{Preparing the BASiCS data object}\label{Tcells-filtering}}
-
-Many BASiCS functions use objects of the class
-\emph{\href{https://bioconductor.org/packages/3.11/SingleCellExperiment}{SingleCellExperiment}} as input.
-The \texttt{newBASiCS\_Data} function can be used to create the required
-\texttt{SingleCellExperiment} object based on the following information:
-
-\begin{itemize}
-\item
-  Counts: a matrix of raw expression counts with dimensions \(q\) times \(n\),
-  where \(q\) is the number of genes (technical + biological) and \(n\) is the number
-  of cells. Gene names must be stored as row names of the counts matrix.
-\item
-  Tech: a vector of \texttt{TRUE/FALSE} elements with length \(q\). If \texttt{Tech{[}i{]}} contains
-  a value of \texttt{FALSE}, gene i is biological;
-  otherwise, the gene is spike-in. This vector must
-  be specified in the same order of genes as in the counts matrix.
-\item
-  SpikeInfo: a \texttt{data.frame} with \(q-q_0\) rows where \(q_0\) is the number
-  of biological genes. The first column must contain the names associated to
-  the spike-in molecules. The second column must contain the input number of
-  molecules for the spike-in molecules (amount per cell).
-\item
-  BatchInfo (optional argument): vector of length \(n\) to indicate batch
-  structure in situations where cells have been processed using multiple
-  batches.
-\end{itemize}
-
-We will first select the naive cells from the \texttt{SingleCellExperiment} object
-that was generated above.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{ind_stimulated <-}\StringTok{ }\NormalTok{sce_naive_active}\OperatorTok{$}\NormalTok{Stimulus }\OperatorTok{==}\StringTok{ "Unstimulated"}
-\NormalTok{sce_naive <-}\StringTok{ }\NormalTok{sce_naive_active[, ind_stimulated]}
-\NormalTok{ind_expressed <-}\StringTok{ }\KeywordTok{rowSums}\NormalTok{(}\KeywordTok{counts}\NormalTok{(sce_naive) }\OperatorTok{>}\StringTok{ }\DecValTok{0}\NormalTok{) }\OperatorTok{>}\StringTok{ }\DecValTok{1} \OperatorTok{&}\StringTok{ }
-\StringTok{  }\KeywordTok{rowMeans}\NormalTok{(}\KeywordTok{counts}\NormalTok{(sce_naive)) }\OperatorTok{>=}\StringTok{ }\DecValTok{1}
-\NormalTok{sce_naive <-}\StringTok{ }\NormalTok{sce_naive[ind_expressed, ]}
-\end{Highlighting}
-\end{Shaded}
-
-Next, we will use the \texttt{newBASiCS\_Data} function to re-generate the
-\texttt{SingleCellExperiment} object for use with \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}}.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\CommentTok{# Here is the first time that we use BASiCS}
-
-\CommentTok{# Select the ERCC spike-ins of the dataset}
-\NormalTok{counts <-}\StringTok{ }\KeywordTok{counts}\NormalTok{(sce_naive)}
-\NormalTok{spikes <-}\StringTok{ }\KeywordTok{assay}\NormalTok{(}\KeywordTok{altExp}\NormalTok{(sce_naive, }\StringTok{"spike-ins"}\NormalTok{))}
-\NormalTok{spikes_present <-}\StringTok{ }\KeywordTok{rowSums}\NormalTok{(spikes) }\OperatorTok{!=}\StringTok{ }\DecValTok{0}
-\CommentTok{## Remove spike-ins that are not present from matrix and SCE object}
-\NormalTok{spikes <-}\StringTok{ }\NormalTok{spikes[spikes_present, ]}
-\NormalTok{altexp_present <-}\StringTok{ }\KeywordTok{altExp}\NormalTok{(sce_naive, }\StringTok{"spike-ins"}\NormalTok{)[spikes_present, ]}
-\KeywordTok{altExp}\NormalTok{(sce_naive, }\StringTok{"spike-ins"}\NormalTok{) <-}\StringTok{ }\NormalTok{altexp_present}
-\NormalTok{ind_spike <-}\StringTok{ }\KeywordTok{c}\NormalTok{(}\KeywordTok{rep}\NormalTok{(}\OtherTok{FALSE}\NormalTok{, }\KeywordTok{nrow}\NormalTok{(counts)), }\KeywordTok{rep}\NormalTok{(}\OtherTok{TRUE}\NormalTok{, }\KeywordTok{nrow}\NormalTok{(spikes)))}
-\NormalTok{spike_input <-}\StringTok{ }\NormalTok{ERCC_count[}\KeywordTok{rownames}\NormalTok{(spikes), ]}
-
-\CommentTok{# Generate the SingleCellExperiment object}
-\NormalTok{data_naive <-}\StringTok{ }\KeywordTok{newBASiCS_Data}\NormalTok{(}
-  \DataTypeTok{Counts =} \KeywordTok{rbind}\NormalTok{(counts, spikes),}
-  \DataTypeTok{Tech =}\NormalTok{ ind_spike,}
-  \DataTypeTok{SpikeInfo =}\NormalTok{ spike_input,}
-  \DataTypeTok{BatchInfo =}\NormalTok{ sce_naive}\OperatorTok{$}\NormalTok{Individuals}
-\NormalTok{)}
-\NormalTok{data_naive}
-\end{Highlighting}
-\end{Shaded}
-
-\begin{verbatim}
-## class: SingleCellExperiment 
-## dim: 8427 93 
-## metadata(1): SpikeInput
-## assays(1): counts
-## rownames(8427): ENSMUSG00000000001 ENSMUSG00000000056 ...
-##   ENSMUSG00000106607 ENSMUSG00000106620
-## rowData names(0):
-## colnames(93): do6113 do6118 ... do6398 do6399
-## colData names(1): BatchInfo
-## reducedDimNames(0):
-## altExpNames(1): spike-ins
-\end{verbatim}
-
-Alternatively, when using datasets that contain spike-in molecules, the
-original \texttt{SingleCellExperiment} object can be extended by simply specifying a
-\texttt{BatchInfo} slot in the \texttt{colData} object and by adding the \texttt{SpikeInfo} object
-to the \texttt{metadata} slot.
-
-\begin{Shaded}
-\begin{Highlighting}[]
-\NormalTok{data_naive <-}\StringTok{ }\NormalTok{sce_naive}
-\KeywordTok{colData}\NormalTok{(data_naive)}\OperatorTok{$}\NormalTok{BatchInfo <-}\StringTok{ }\KeywordTok{colData}\NormalTok{(sce_naive)}\OperatorTok{$}\NormalTok{Individuals}
-\KeywordTok{metadata}\NormalTok{(data_naive)}\OperatorTok{$}\NormalTok{SpikeInput <-}\StringTok{ }\NormalTok{spike_input}
-\end{Highlighting}
-\end{Shaded}
-
-After creating the \texttt{SingleCellExperiment} object that contains all information
-that \emph{\href{https://bioconductor.org/packages/3.11/BASiCS}{BASiCS}} requires, the MCMC sampler can be run to generate
-posterior estimates of model parameters.
 
 {\small\bibliography{Workflow.bib}}
 
