--- a/Workflow.Rmd
+++ b/Workflow.Rmd
@@ -672,6 +672,14 @@ metadata(sce_naive)$SpikeInput <- SpikeInput
 metadata(sce_active)$SpikeInput <- SpikeInput
 ```
 
+## BASiCS analysis - running the MCMC
+
+TBC
+
+## BASiCS analysis - convergence diagnostics
+
+TBC
+
 ## Single condition example: Naive CD4^+^ T cells {#Tcells-single}
 
 To highlight the use of BASiCS to analyse cells in the single-condition case,
@@ -682,84 +690,6 @@ Among others, these include gene-specific parameters for mean expression,
 over-dispersion (biological variability) and residual over-dispersion 
 (biological variability after correcting for the confounding of mean and
 over-dispersion).
-
-### Preparing the BASiCS data object {#Tcells-filtering}
-
-Many BASiCS functions use objects of the class 
-`r Biocpkg("SingleCellExperiment")` as input.
-The `newBASiCS_Data` function can be used to create the required 
-`SingleCellExperiment` object based on the following information:
-
-* Counts: a matrix of raw expression counts with dimensions $q$ times $n$, 
-  where $q$ is the number of genes (technical + biological) and $n$ is the number 
-  of cells. Gene names must be stored as row names of the counts matrix.
-
-* Tech: a vector of `TRUE/FALSE` elements with length $q$. If `Tech[i]` contains
-  a value of `FALSE`, gene i is biological;
-  otherwise, the gene is spike-in. This vector must 
-  be specified in the same order of genes as in the counts matrix.
-
-* SpikeInfo: a `data.frame` with $q-q_0$ rows where $q_0$ is the number 
-  of biological genes. The first column must contain the names associated to 
-  the spike-in molecules. The second column must contain the input number of 
-  molecules for the spike-in molecules (amount per cell).
-
-* BatchInfo (optional argument): vector of length $n$ to indicate batch 
-  structure in situations where cells have been processed using multiple 
-  batches.
-
-We will first select the naive cells from the `SingleCellExperiment` object 
-that was generated above.
-
-```{r SCE-naive}
-ind_stimulated <- sce_naive_active$Stimulus == "Unstimulated"
-sce_naive <- sce_naive_active[, ind_stimulated]
-ind_expressed <- rowSums(counts(sce_naive) > 0) > 1 & 
-  rowMeans(counts(sce_naive)) >= 1
-sce_naive <- sce_naive[ind_expressed, ]
-```
-
-Next, we will use the `newBASiCS_Data` function to re-generate the 
-`SingleCellExperiment` object for use with `r Biocpkg("BASiCS")`.
-
-```{r Data-naive}
-# Here is the first time that we use BASiCS
-
-# Select the ERCC spike-ins of the dataset
-counts <- counts(sce_naive)
-spikes <- assay(altExp(sce_naive, "spike-ins"))
-spikes_present <- rowSums(spikes) != 0
-## Remove spike-ins that are not present from matrix and SCE object
-spikes <- spikes[spikes_present, ]
-altexp_present <- altExp(sce_naive, "spike-ins")[spikes_present, ]
-altExp(sce_naive, "spike-ins") <- altexp_present
-ind_spike <- c(rep(FALSE, nrow(counts)), rep(TRUE, nrow(spikes)))
-spike_input <- ERCC_count[rownames(spikes), ]
-
-# Generate the SingleCellExperiment object
-data_naive <- newBASiCS_Data(
-  Counts = rbind(counts, spikes),
-  Tech = ind_spike,
-  SpikeInfo = spike_input,
-  BatchInfo = sce_naive$Individuals
-)
-data_naive
-```
-
-Alternatively, when using datasets that contain spike-in molecules, the 
-original `SingleCellExperiment` object can be extended by simply specifying a 
-`BatchInfo` slot in the `colData` object and by adding the `SpikeInfo` object 
-to the `metadata` slot.
-
-```{r Data-naive-alternative}
-data_naive <- sce_naive
-colData(data_naive)$BatchInfo <- colData(sce_naive)$Individuals
-metadata(data_naive)$SpikeInput <- spike_input
-```
-
-After creating the `SingleCellExperiment` object that contains all information 
-that `r Biocpkg("BASiCS")` requires, the MCMC sampler can be run to generate
-posterior estimates of model parameters.
 
 ### Running MCMC
 
